kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grooming-api
  namespace: rtc-namespaces
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grooming-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grooming-api
    spec:
      containers:
      - env:
        - name: __VITE_ADDITIONAL_SERVER_ALLOWED_HOSTS
          value: .symphony.com
        image: us-east4-docker.pkg.dev/sym-prod-mr-tools-01/rtc-docker-us-east4/grooming-api:latest
        imagePullPolicy: Always
        name: grooming-api
        ports:
        - containerPort: 3000
          name: backend
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: "1"
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: grooming-api
  name: grooming-api
  namespace: rtc-namespaces
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: backend
  selector:
    app.kubernetes.io/name: grooming-api
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/protocols: "https"
    konghq.com/https-redirect-status-code: "301"
  labels:
    app.kubernetes.io/name: grooming-api
  name: grooming-api
  namespace: rtc-namespaces
spec:
  ingressClassName: kong-ext
  rules:
  - host: grooming-api.gke-use4-001.dev.symphony.com
    http:
      paths:
      - backend:
          service:
            name: grooming-api
            port:
              number: 80
        path: /
        pathType: Prefix
